force-app/main/default/objects/Scope__c/Scope__c.object-meta.xml
<CustomObject>
    <description>Program / Project Scope</description>
    <label>Scope</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>Scope #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scope</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>