force-app/main/default/objects/Scope__c/fields/DMS_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>DMS_Engagement_Type__c</fullName>
    <label>DMS Engagement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>