force-app/main/default/objects/Scope__c/fields/DMS_Sub_Scope_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Sub_Scope_Id__c</fullName>
    <label>DMS Sub Scope Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>