force-app/main/default/objects/Scope__c/fields/External_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Opportunity_Id__c</fullName>
    <formula>Opportunity__r.External_Record_Id__c</formula>
    <label>External Opportunity Id</label>
    <type>Text</type>
</CustomField>