force-app/main/default/objects/Scope__c/fields/External_Sub_Scope_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Sub_Scope_Id__c</fullName>
    <formula>Sub_Scope__r.External_Record_Id__c</formula>
    <label>External Sub Scope Id</label>
    <type>Text</type>
</CustomField>