force-app/main/default/objects/Scope__c/fields/RSPO_Team_Guidance__c.field-meta.xml
<CustomField>
    <fullName>RSPO_Team_Guidance__c</fullName>
    <label>RSPO Team Guidance</label>
    <type>TextArea</type>
</CustomField>