force-app/main/default/objects/Scope__c/fields/Sub_Scope__c.field-meta.xml
<CustomField>
    <fullName>Sub_Scope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Scope</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>$Source.Program__c</field>
            <operation>equals</operation>
            <valueField>Scope__c.Program__c</valueField>
        </filterItems>
        <filterItems>
            <field>Scope__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub Scope</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Scope</relationshipLabel>
    <relationshipName>SubScope</relationshipName>
    <type>Lookup</type>
</CustomField>