force-app/main/default/objects/Scope__c/fields/SubScope__c.field-meta.xml
<CustomField>
    <fullName>SubScope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Scope</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>$Source.Program__c</field>
            <operation>equals</operation>
            <valueField>Client_Activity__c.Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Client_Activity__c</referenceTo>
    <relationshipLabel>Scope</relationshipLabel>
    <relationshipName>Scope</relationshipName>
    <type>Lookup</type>
</CustomField>