force-app/main/default/objects/Scope__c/recordTypes/Sub_Scope.recordType-meta.xml
<RecordType>
    <fullName>Sub_Scope</fullName>
    <active>true</active>
    <description>Use only for Program Specific Sub Scope Scope(Use Add Sub Scope button from Opportunity)</description>
    <label>Sub Scope</label>
</RecordType>