force-app/main/default/objects/Scope__c/validationRules/Program_is_required_on_Sub_Scope_RT.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_is_required_on_Sub_Scope_RT</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() ,  RecordType.DeveloperName = &apos;Sub_Scope&apos;,   ISBLANK(Program__c) )</errorConditionFormula>
    <errorMessage>Program cannot be blank.</errorMessage>
</ValidationRule>