force-app/main/default/objects/Scope__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Program__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Sub_Scope__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>